solve the mobile overflow problem

--- a/css/style.css
+++ b/css/style.css
@@ -351,6 +351,7 @@ template {
   padding: 0;
   box-sizing: border-box;
   font-family: "Nunito", sans-serif;
+  overflow-x: hidden;
 }
 
 .wrapper {
